QQuickText: Mark as a dirty node when its ClipRect changes

Make sure that any changes to ClipRect of QQuickText are properly
propagated.

Fixes: QTBUG-106164
Fixes: QTBUG-106205
Pick-to: 6.5
Change-Id: Id37099811cf8e10dd510dc5f8086d1323f92af9e
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>